--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "scripts": {
     "dev": "tsx src/server.ts",
-    "build":"tsup src",
-    "start": "node dist/server.js"
+    "build":"tsup src/server.ts --out-dir dist",
+    "start": "npm run build && node dist/server.js"
   },
   "keywords": [],
   "author": "",
