--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": "18"
   },
   "scripts": {
-    "dev": "tsx src/server.ts",
+    "dev": "nodemon --watch src --ext ts,tsx --exec ts-node src/server.ts",
     "build": "tsup src/server.ts",
     "start": "node dist/server.js"
   },
@@ -15,16 +15,19 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/fastify-cors": "^2.1.0",
     "@types/node": "^22.7.3",
+    "nodemon": "^3.1.7",
     "prisma": "^5.20.0",
+    "ts-node": "^10.9.2",
     "tsup": "^8.3.0",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@fastify/cors": "^10.0.1",
     "@prisma/client": "^5.20.0",
     "fastify": "^5.0.0",
-    "nano": "^10.1.4",
     "nanoid": "^5.0.7"
   }
 }
